--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = tom_registration
+name = tom-registration
 version = 0.1
 description = Reusable TOMToolkit app to support multiple user registration flows.
 long_description = file: README.md
