--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,5 @@
 [metadata]
 name = tom-registration
-version = 0.1
 description = Reusable TOMToolkit app to support multiple user registration flows.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -32,6 +31,9 @@ keywords =
     science
 
 [options]
+setup_requires =
+    setuptools_scm
+    wheel
 install_requires =
     tomtoolkit >= 2.5
 include_package_data = true
