Upping tom_base version

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ setup_requires =
     setuptools_scm
     wheel
 install_requires =
-    tomtoolkit >= 2.5
+    tomtoolkit >= 2.6.0a1
 include_package_data = true
 packages = find:
 
