--- a/setup.cfg
+++ b/setup.cfg
@@ -5,20 +5,19 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/TOMToolkit/tom_registration
 author = TOM Toolkit Project
-author_email = {dcollom,llindstrom}@lco.global
+author_email = dcollom@lco.global, llindstrom@lco.global
 license = GPL-3.0 License
 classifiers =
     Environment :: Web Environment
     Framework :: Django
-    Framework :: Django :: 3.1  # Replace "X.Y" as appropriate
+    Framework :: Django :: 3.1
     Intended Audience :: Developers
     Intended Audience :: Science/Research
-    License :: OSI Approved :: GPL-3.0 License
+    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Topic :: Scientific/Engineering :: Astronomy
