--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,7 @@ packages = find:
 
 [options.extras_require]
 test =
-    factory_boy >= 3.1,< 3.3
+    factory_boy ~= 3.2
     pytest >= 3.0.3
 
 [aliases]
