--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,3 +7,7 @@ updates:
     interval: daily
     time: "13:00"
   open-pull-requests-limit: 10
+  target-branch: dev
+  reviewers:
+  - jchate6
+  - phycodurus
