--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,20 +9,20 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.9'
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip setuptools wheel
-        pip install -r requirements.txt
-        pip install -I flake8
+        python -m pip install --upgrade pip
+        python -m pip install "poetry>=2.0,<3.0"
+        poetry install --with lint
     - name: Style Checks
-      run: flake8 tom_* --exclude=*/migrations/* --max-line-length=120
+      run: poetry run flake8 tom_* --exclude=*/migrations/* --max-line-length=120
 
   run_tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: ["3.12", "3.11", "3.10", "3.9"]
         os: [ubuntu-latest, macos-latest]
         exclude:
           - os: ubuntu-latest
@@ -34,11 +34,13 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install -r requirements.txt coverage coveralls
-          pip install -I flake8
+          python -m pip install --upgrade pip
+          python -m pip install "poetry>=2.0,<3.0"
+          poetry env info  # display poetry's env info for debugging
+          poetry install  --with test,coverage,lint
       - name: Run Tests
-        run: python manage.py test --exclude-tag=canary
+        run: |
+          poetry run python manage.py test --exclude-tag=canary
 
   publish_coverage:
     runs-on: ubuntu-latest
@@ -49,12 +51,13 @@ jobs:
           python-version: 3.9
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install -r requirements.txt coverage coveralls
-          pip install -I flake8
+          python -m pip install --upgrade pip
+          python -m pip install "poetry>=2.0,<3.0"
+          poetry install --with test,coverage,lint
       - name: Run Tests
-        run: coverage run --include=tom_* manage.py test --exclude-tag=canary
+        run: poetry run coverage run --include=tom_* manage.py test --exclude-tag=canary
       - name: Report Coverage
-        run: coveralls
+        run: poetry run coveralls
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
