--- a/.github/workflows/run-canary-tests.yml
+++ b/.github/workflows/run-canary-tests.yml
@@ -11,8 +11,11 @@ jobs:
       with:
         python-version: '3.x'
     - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install "poetry>=2.0,<3.0"
+          poetry env info  # display poetry's env info for debugging
+          poetry install  --with test,coverage,lint
+    - name: Run Tests
       run: |
-        python -m pip install --upgrade pip setuptools wheel
-        pip install -r requirements.txt
-    - name: Run Canary Tests
-      run: python manage.py test --tag=canary
+        poetry run python tom_registration/tests/run_tests.py --canary
